voidcsfml/include/voidcsfml/graphics.h

VOIDCSFML_API circleshape_getposition(void* self, void* result);
VOIDCSFML_API circleshape_getrotation(void* self, float* result);
VOIDCSFML_API circleshape_getscale(void* self, void* result);
VOIDCSFML_API circleshape_getorigin(void* self, void* result);
VOIDCSFML_API circleshape_move_Bw9Bw9(void* self, float offset_x, float offset_y);
VOIDCSFML_API circleshape_move_UU2(void* self, void* offset);
VOIDCSFML_API circleshape_rotate_Bw9(void* self, float angle);
VOIDCSFML_API circleshape_scale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API circleshape_scale_UU2(void* self, void* factor);
VOIDCSFML_API circleshape_gettransform(void* self, void* result);
VOIDCSFML_API circleshape_getinversetransform(void* self, void* result);
VOIDCSFML_API circleshape_draw_kb9RoT(void* self, void* target, void* states);
VOIDCSFML_API circleshape_draw_fqURoT(void* self, void* target, void* states);
VOIDCSFML_API circleshape_draw_Xk1RoT(void* self, void* target, void* states);
VOIDCSFML_API circleshape_initialize_Ii7(void* self, void* copy);
VOIDCSFML_API convexshape_initialize_vgv(void* self, size_t point_count);
VOIDCSFML_API convexshape_setpointcount_vgv(void* self, size_t count);
VOIDCSFML_API convexshape_getpointcount(void* self, size_t* result);
VOIDCSFML_API convexshape_setpoint_vgvUU2(void* self, size_t index, void* point);
VOIDCSFML_API convexshape_getpoint_vgv(void* self, size_t index, void* result);
VOIDCSFML_API convexshape_settexture_MXdGZq(void* self, void* texture, unsigned char reset_rect);
VOIDCSFML_API convexshape_settexturerect_2k1(void* self, void* rect);
VOIDCSFML_API convexshape_setfillcolor_QVe(void* self, void* color);
VOIDCSFML_API convexshape_setoutlinecolor_QVe(void* self, void* color);
VOIDCSFML_API convexshape_setoutlinethickness_Bw9(void* self, float thickness);
VOIDCSFML_API convexshape_gettexture(void* self, void** result);
VOIDCSFML_API convexshape_gettexturerect(void* self, void* result);
VOIDCSFML_API convexshape_getfillcolor(void* self, void* result);
VOIDCSFML_API convexshape_getoutlinecolor(void* self, void* result);
VOIDCSFML_API convexshape_getoutlinethickness(void* self, float* result);
VOIDCSFML_API convexshape_getlocalbounds(void* self, void* result);
VOIDCSFML_API convexshape_getglobalbounds(void* self, void* result);
VOIDCSFML_API convexshape_setposition_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API convexshape_setposition_UU2(void* self, void* position);
VOIDCSFML_API convexshape_setrotation_Bw9(void* self, float angle);
VOIDCSFML_API convexshape_setscale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API convexshape_setscale_UU2(void* self, void* factors);
VOIDCSFML_API convexshape_setorigin_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API convexshape_setorigin_UU2(void* self, void* origin);
VOIDCSFML_API convexshape_getposition(void* self, void* result);
VOIDCSFML_API convexshape_getrotation(void* self, float* result);
VOIDCSFML_API convexshape_getscale(void* self, void* result);
VOIDCSFML_API convexshape_getorigin(void* self, void* result);
VOIDCSFML_API convexshape_move_Bw9Bw9(void* self, float offset_x, float offset_y);
VOIDCSFML_API convexshape_move_UU2(void* self, void* offset);
VOIDCSFML_API convexshape_rotate_Bw9(void* self, float angle);
VOIDCSFML_API convexshape_scale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API convexshape_scale_UU2(void* self, void* factor);
VOIDCSFML_API convexshape_gettransform(void* self, void* result);
VOIDCSFML_API convexshape_getinversetransform(void* self, void* result);
VOIDCSFML_API convexshape_draw_kb9RoT(void* self, void* target, void* states);
VOIDCSFML_API convexshape_draw_fqURoT(void* self, void* target, void* states);
VOIDCSFML_API convexshape_draw_Xk1RoT(void* self, void* target, void* states);
VOIDCSFML_API convexshape_initialize_Ydx(void* self, void* copy);
VOIDCSFML_API glyph_initialize(void* self);
VOIDCSFML_API glyph_setadvance_Bw9(void* self, float advance);
VOIDCSFML_API glyph_setbounds_5MC(void* self, void* bounds);
VOIDCSFML_API glyph_settexturerect_POq(void* self, void* texture_rect);
VOIDCSFML_API glyph_initialize_UlF(void* self, void* copy);
VOIDCSFML_API image_initialize(void* self);
VOIDCSFML_API image_finalize(void* self);
VOIDCSFML_API image_create_emSemSQVe(void* self, unsigned int width, unsigned int height, void* color);
VOIDCSFML_API image_create_emSemS843(void* self, unsigned int width, unsigned int height, uint8_t* pixels);
VOIDCSFML_API image_loadfromfile_zkC(void* self, size_t filename_size, char* filename, unsigned char* result);
VOIDCSFML_API image_loadfrommemory_5h8vgv(void* self, void* data, size_t size, unsigned char* result);
VOIDCSFML_API image_loadfromstream_PO0(void* self, void* stream, unsigned char* result);
VOIDCSFML_API image_savetofile_zkC(void* self, size_t filename_size, char* filename, unsigned char* result);
VOIDCSFML_API image_getsize(void* self, void* result);
VOIDCSFML_API image_createmaskfromcolor_QVe9yU(void* self, void* color, uint8_t alpha);
VOIDCSFML_API image_copy_dptemSemS2k1GZq(void* self, void* source, unsigned int dest_x, unsigned int dest_y, void* source_rect, unsigned char apply_alpha);
VOIDCSFML_API image_setpixel_emSemSQVe(void* self, unsigned int x, unsigned int y, void* color);
VOIDCSFML_API image_getpixel_emSemS(void* self, unsigned int x, unsigned int y, void* result);
VOIDCSFML_API image_getpixelsptr(void* self, uint8_t** result);
VOIDCSFML_API image_fliphorizontally(void* self);
VOIDCSFML_API image_flipvertically(void* self);
VOIDCSFML_API image_initialize_dpt(void* self, void* copy);
VOIDCSFML_API texture_initialize(void* self);
VOIDCSFML_API texture_finalize(void* self);
VOIDCSFML_API texture_create_emSemS(void* self, unsigned int width, unsigned int height, unsigned char* result);
VOIDCSFML_API texture_loadfromfile_zkC2k1(void* self, size_t filename_size, char* filename, void* area, unsigned char* result);
VOIDCSFML_API texture_loadfrommemory_5h8vgv2k1(void* self, void* data, size_t size, void* area, unsigned char* result);
VOIDCSFML_API texture_loadfromstream_PO02k1(void* self, void* stream, void* area, unsigned char* result);
VOIDCSFML_API texture_loadfromimage_dpt2k1(void* self, void* image, void* area, unsigned char* result);
VOIDCSFML_API texture_getsize(void* self, void* result);
VOIDCSFML_API texture_copytoimage(void* self, void* result);
VOIDCSFML_API texture_update_843(void* self, uint8_t* pixels);
VOIDCSFML_API texture_update_843emSemSemSemS(void* self, uint8_t* pixels, unsigned int width, unsigned int height, unsigned int x, unsigned int y);
VOIDCSFML_API texture_update_dpt(void* self, void* image);
VOIDCSFML_API texture_update_dptemSemS(void* self, void* image, unsigned int x, unsigned int y);
VOIDCSFML_API texture_update_JRh(void* self, void* window);
VOIDCSFML_API texture_update_JRhemSemS(void* self, void* window, unsigned int x, unsigned int y);
VOIDCSFML_API texture_setsmooth_GZq(void* self, unsigned char smooth);
VOIDCSFML_API texture_issmooth(void* self, unsigned char* result);
VOIDCSFML_API texture_setrepeated_GZq(void* self, unsigned char repeated);
VOIDCSFML_API texture_isrepeated(void* self, unsigned char* result);
VOIDCSFML_API texture_getnativehandle(void* self, unsigned int* result);
VOIDCSFML_API texture_bind_MXdK9j(void* texture, int coordinate_type);
VOIDCSFML_API texture_getmaximumsize(unsigned int* result);
VOIDCSFML_API texture_initialize_DJb(void* self, void* copy);
VOIDCSFML_API font_info_initialize(void* self);
VOIDCSFML_API font_info_getfamily(void* self, char** result);
VOIDCSFML_API font_info_setfamily_Fzm(void* self, size_t family_size, char* family);
VOIDCSFML_API font_info_initialize_HPc(void* self, void* copy);
VOIDCSFML_API font_initialize(void* self);
VOIDCSFML_API font_finalize(void* self);
VOIDCSFML_API font_loadfromfile_zkC(void* self, size_t filename_size, char* filename, unsigned char* result);
VOIDCSFML_API font_loadfrommemory_5h8vgv(void* self, void* data, size_t size_in_bytes, unsigned char* result);
VOIDCSFML_API font_loadfromstream_PO0(void* self, void* stream, unsigned char* result);
VOIDCSFML_API font_getinfo(void* self, void** result);
VOIDCSFML_API font_getglyph_saLemSGZq(void* self, uint32_t code_point, unsigned int character_size, unsigned char bold, void* result);
VOIDCSFML_API font_getkerning_saLsaLemS(void* self, uint32_t first, uint32_t second, unsigned int character_size, float* result);
VOIDCSFML_API font_getlinespacing_emS(void* self, unsigned int character_size, float* result);
VOIDCSFML_API font_getunderlineposition_emS(void* self, unsigned int character_size, float* result);
VOIDCSFML_API font_getunderlinethickness_emS(void* self, unsigned int character_size, float* result);
VOIDCSFML_API font_gettexture_emS(void* self, unsigned int character_size, void** result);
VOIDCSFML_API font_initialize_7CF(void* self, void* copy);
VOIDCSFML_API rectangleshape_initialize_UU2(void* self, void* size);
VOIDCSFML_API rectangleshape_setsize_UU2(void* self, void* size);
VOIDCSFML_API rectangleshape_getsize(void* self, void* result);
VOIDCSFML_API rectangleshape_getpointcount(void* self, size_t* result);
VOIDCSFML_API rectangleshape_getpoint_vgv(void* self, size_t index, void* result);
VOIDCSFML_API rectangleshape_settexture_MXdGZq(void* self, void* texture, unsigned char reset_rect);
VOIDCSFML_API rectangleshape_settexturerect_2k1(void* self, void* rect);
VOIDCSFML_API rectangleshape_setfillcolor_QVe(void* self, void* color);
VOIDCSFML_API rectangleshape_setoutlinecolor_QVe(void* self, void* color);
VOIDCSFML_API rectangleshape_setoutlinethickness_Bw9(void* self, float thickness);
VOIDCSFML_API rectangleshape_gettexture(void* self, void** result);
VOIDCSFML_API rectangleshape_gettexturerect(void* self, void* result);
VOIDCSFML_API rectangleshape_getfillcolor(void* self, void* result);
VOIDCSFML_API rectangleshape_getoutlinecolor(void* self, void* result);
VOIDCSFML_API rectangleshape_getoutlinethickness(void* self, float* result);
VOIDCSFML_API rectangleshape_getlocalbounds(void* self, void* result);
VOIDCSFML_API rectangleshape_getglobalbounds(void* self, void* result);
VOIDCSFML_API rectangleshape_setposition_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API rectangleshape_setposition_UU2(void* self, void* position);
VOIDCSFML_API rectangleshape_setrotation_Bw9(void* self, float angle);
VOIDCSFML_API rectangleshape_setscale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API rectangleshape_setscale_UU2(void* self, void* factors);
VOIDCSFML_API rectangleshape_setorigin_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API rectangleshape_setorigin_UU2(void* self, void* origin);
VOIDCSFML_API rectangleshape_getposition(void* self, void* result);
VOIDCSFML_API rectangleshape_getrotation(void* self, float* result);
VOIDCSFML_API rectangleshape_getscale(void* self, void* result);
VOIDCSFML_API rectangleshape_getorigin(void* self, void* result);
VOIDCSFML_API rectangleshape_move_Bw9Bw9(void* self, float offset_x, float offset_y);
VOIDCSFML_API rectangleshape_move_UU2(void* self, void* offset);
VOIDCSFML_API rectangleshape_rotate_Bw9(void* self, float angle);
VOIDCSFML_API rectangleshape_scale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API rectangleshape_scale_UU2(void* self, void* factor);
VOIDCSFML_API rectangleshape_gettransform(void* self, void* result);
VOIDCSFML_API rectangleshape_getinversetransform(void* self, void* result);
VOIDCSFML_API rectangleshape_draw_kb9RoT(void* self, void* target, void* states);
VOIDCSFML_API rectangleshape_draw_fqURoT(void* self, void* target, void* states);
VOIDCSFML_API rectangleshape_draw_Xk1RoT(void* self, void* target, void* states);
VOIDCSFML_API rectangleshape_initialize_wlj(void* self, void* copy);
VOIDCSFML_API view_initialize(void* self);
VOIDCSFML_API view_initialize_WPZ(void* self, void* rectangle);
VOIDCSFML_API view_initialize_UU2UU2(void* self, void* center, void* size);
VOIDCSFML_API view_setcenter_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API view_setcenter_UU2(void* self, void* center);
VOIDCSFML_API view_setsize_Bw9Bw9(void* self, float width, float height);
VOIDCSFML_API view_setsize_UU2(void* self, void* size);
VOIDCSFML_API view_setrotation_Bw9(void* self, float angle);
VOIDCSFML_API view_setviewport_WPZ(void* self, void* viewport);
VOIDCSFML_API view_reset_WPZ(void* self, void* rectangle);
VOIDCSFML_API view_getcenter(void* self, void* result);
VOIDCSFML_API view_getsize(void* self, void* result);
VOIDCSFML_API view_getrotation(void* self, float* result);