src/graphics/lib.cr

  fun circleshape_getposition(self : Void*, result : Void*)
  fun circleshape_getrotation(self : Void*, result : LibC::Float*)
  fun circleshape_getscale(self : Void*, result : Void*)
  fun circleshape_getorigin(self : Void*, result : Void*)
  fun circleshape_move_Bw9Bw9(self : Void*, offset_x : LibC::Float, offset_y : LibC::Float)
  fun circleshape_move_UU2(self : Void*, offset : Void*)
  fun circleshape_rotate_Bw9(self : Void*, angle : LibC::Float)
  fun circleshape_scale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun circleshape_scale_UU2(self : Void*, factor : Void*)
  fun circleshape_gettransform(self : Void*, result : Void*)
  fun circleshape_getinversetransform(self : Void*, result : Void*)
  fun circleshape_draw_kb9RoT(self : Void*, target : Void*, states : Void*)
  fun circleshape_draw_fqURoT(self : Void*, target : Void*, states : Void*)
  fun circleshape_draw_Xk1RoT(self : Void*, target : Void*, states : Void*)
  fun circleshape_initialize_Ii7(self : Void*, copy : Void*)
  fun convexshape_initialize_vgv(self : Void*, point_count : LibC::SizeT)
  fun convexshape_setpointcount_vgv(self : Void*, count : LibC::SizeT)
  fun convexshape_getpointcount(self : Void*, result : LibC::SizeT*)
  fun convexshape_setpoint_vgvUU2(self : Void*, index : LibC::SizeT, point : Void*)
  fun convexshape_getpoint_vgv(self : Void*, index : LibC::SizeT, result : Void*)
  fun convexshape_settexture_MXdGZq(self : Void*, texture : Void*, reset_rect : Bool)
  fun convexshape_settexturerect_2k1(self : Void*, rect : Void*)
  fun convexshape_setfillcolor_QVe(self : Void*, color : Void*)
  fun convexshape_setoutlinecolor_QVe(self : Void*, color : Void*)
  fun convexshape_setoutlinethickness_Bw9(self : Void*, thickness : LibC::Float)
  fun convexshape_gettexture(self : Void*, result : Void**)
  fun convexshape_gettexturerect(self : Void*, result : Void*)
  fun convexshape_getfillcolor(self : Void*, result : Void*)
  fun convexshape_getoutlinecolor(self : Void*, result : Void*)
  fun convexshape_getoutlinethickness(self : Void*, result : LibC::Float*)
  fun convexshape_getlocalbounds(self : Void*, result : Void*)
  fun convexshape_getglobalbounds(self : Void*, result : Void*)
  fun convexshape_setposition_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun convexshape_setposition_UU2(self : Void*, position : Void*)
  fun convexshape_setrotation_Bw9(self : Void*, angle : LibC::Float)
  fun convexshape_setscale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun convexshape_setscale_UU2(self : Void*, factors : Void*)
  fun convexshape_setorigin_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun convexshape_setorigin_UU2(self : Void*, origin : Void*)
  fun convexshape_getposition(self : Void*, result : Void*)
  fun convexshape_getrotation(self : Void*, result : LibC::Float*)
  fun convexshape_getscale(self : Void*, result : Void*)
  fun convexshape_getorigin(self : Void*, result : Void*)
  fun convexshape_move_Bw9Bw9(self : Void*, offset_x : LibC::Float, offset_y : LibC::Float)
  fun convexshape_move_UU2(self : Void*, offset : Void*)
  fun convexshape_rotate_Bw9(self : Void*, angle : LibC::Float)
  fun convexshape_scale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun convexshape_scale_UU2(self : Void*, factor : Void*)
  fun convexshape_gettransform(self : Void*, result : Void*)
  fun convexshape_getinversetransform(self : Void*, result : Void*)
  fun convexshape_draw_kb9RoT(self : Void*, target : Void*, states : Void*)
  fun convexshape_draw_fqURoT(self : Void*, target : Void*, states : Void*)
  fun convexshape_draw_Xk1RoT(self : Void*, target : Void*, states : Void*)
  fun convexshape_initialize_Ydx(self : Void*, copy : Void*)
  fun glyph_initialize(self : Void*)
  fun glyph_setadvance_Bw9(self : Void*, advance : LibC::Float)
  fun glyph_setbounds_5MC(self : Void*, bounds : Void*)
  fun glyph_settexturerect_POq(self : Void*, texture_rect : Void*)
  fun glyph_initialize_UlF(self : Void*, copy : Void*)
  fun image_initialize(self : Void*)
  fun image_finalize(self : Void*)
  fun image_create_emSemSQVe(self : Void*, width : LibC::UInt, height : LibC::UInt, color : Void*)
  fun image_create_emSemS843(self : Void*, width : LibC::UInt, height : LibC::UInt, pixels : UInt8*)
  fun image_loadfromfile_zkC(self : Void*, filename_size : LibC::SizeT, filename : LibC::Char*, result : Bool*)
  fun image_loadfrommemory_5h8vgv(self : Void*, data : UInt8*, size : LibC::SizeT, result : Bool*)
  fun image_loadfromstream_PO0(self : Void*, stream : Void*, result : Bool*)
  fun image_savetofile_zkC(self : Void*, filename_size : LibC::SizeT, filename : LibC::Char*, result : Bool*)
  fun image_getsize(self : Void*, result : Void*)
  fun image_createmaskfromcolor_QVe9yU(self : Void*, color : Void*, alpha : UInt8)
  fun image_copy_dptemSemS2k1GZq(self : Void*, source : Void*, dest_x : LibC::UInt, dest_y : LibC::UInt, source_rect : Void*, apply_alpha : Bool)
  fun image_setpixel_emSemSQVe(self : Void*, x : LibC::UInt, y : LibC::UInt, color : Void*)
  fun image_getpixel_emSemS(self : Void*, x : LibC::UInt, y : LibC::UInt, result : Void*)
  fun image_getpixelsptr(self : Void*, result : UInt8**)
  fun image_fliphorizontally(self : Void*)
  fun image_flipvertically(self : Void*)
  fun image_initialize_dpt(self : Void*, copy : Void*)
  fun texture_initialize(self : Void*)
  fun texture_finalize(self : Void*)
  fun texture_create_emSemS(self : Void*, width : LibC::UInt, height : LibC::UInt, result : Bool*)
  fun texture_loadfromfile_zkC2k1(self : Void*, filename_size : LibC::SizeT, filename : LibC::Char*, area : Void*, result : Bool*)
  fun texture_loadfrommemory_5h8vgv2k1(self : Void*, data : UInt8*, size : LibC::SizeT, area : Void*, result : Bool*)
  fun texture_loadfromstream_PO02k1(self : Void*, stream : Void*, area : Void*, result : Bool*)
  fun texture_loadfromimage_dpt2k1(self : Void*, image : Void*, area : Void*, result : Bool*)
  fun texture_getsize(self : Void*, result : Void*)
  fun texture_copytoimage(self : Void*, result : Void*)
  fun texture_update_843(self : Void*, pixels : UInt8*)
  fun texture_update_843emSemSemSemS(self : Void*, pixels : UInt8*, width : LibC::UInt, height : LibC::UInt, x : LibC::UInt, y : LibC::UInt)
  fun texture_update_dpt(self : Void*, image : Void*)
  fun texture_update_dptemSemS(self : Void*, image : Void*, x : LibC::UInt, y : LibC::UInt)
  fun texture_update_JRh(self : Void*, window : Void*)
  fun texture_update_JRhemSemS(self : Void*, window : Void*, x : LibC::UInt, y : LibC::UInt)
  fun texture_setsmooth_GZq(self : Void*, smooth : Bool)
  fun texture_issmooth(self : Void*, result : Bool*)
  fun texture_setrepeated_GZq(self : Void*, repeated : Bool)
  fun texture_isrepeated(self : Void*, result : Bool*)
  fun texture_getnativehandle(self : Void*, result : LibC::UInt*)
  fun texture_bind_MXdK9j(texture : Void*, coordinate_type : LibC::Int)
  fun texture_getmaximumsize(result : LibC::UInt*)
  fun texture_initialize_DJb(self : Void*, copy : Void*)
  fun font_info_initialize(self : Void*)
  fun font_info_getfamily(self : Void*, result : LibC::Char**)
  fun font_info_setfamily_Fzm(self : Void*, family_size : LibC::SizeT, family : LibC::Char*)
  fun font_info_initialize_HPc(self : Void*, copy : Void*)
  fun font_initialize(self : Void*)
  fun font_finalize(self : Void*)
  fun font_loadfromfile_zkC(self : Void*, filename_size : LibC::SizeT, filename : LibC::Char*, result : Bool*)
  fun font_loadfrommemory_5h8vgv(self : Void*, data : UInt8*, size_in_bytes : LibC::SizeT, result : Bool*)
  fun font_loadfromstream_PO0(self : Void*, stream : Void*, result : Bool*)
  fun font_getinfo(self : Void*, result : Void**)
  fun font_getglyph_saLemSGZq(self : Void*, code_point : UInt32, character_size : LibC::UInt, bold : Bool, result : Void*)
  fun font_getkerning_saLsaLemS(self : Void*, first : UInt32, second : UInt32, character_size : LibC::UInt, result : LibC::Float*)
  fun font_getlinespacing_emS(self : Void*, character_size : LibC::UInt, result : LibC::Float*)
  fun font_getunderlineposition_emS(self : Void*, character_size : LibC::UInt, result : LibC::Float*)
  fun font_getunderlinethickness_emS(self : Void*, character_size : LibC::UInt, result : LibC::Float*)
  fun font_gettexture_emS(self : Void*, character_size : LibC::UInt, result : Void**)
  fun font_initialize_7CF(self : Void*, copy : Void*)
  fun rectangleshape_initialize_UU2(self : Void*, size : Void*)
  fun rectangleshape_setsize_UU2(self : Void*, size : Void*)
  fun rectangleshape_getsize(self : Void*, result : Void*)
  fun rectangleshape_getpointcount(self : Void*, result : LibC::SizeT*)
  fun rectangleshape_getpoint_vgv(self : Void*, index : LibC::SizeT, result : Void*)
  fun rectangleshape_settexture_MXdGZq(self : Void*, texture : Void*, reset_rect : Bool)
  fun rectangleshape_settexturerect_2k1(self : Void*, rect : Void*)
  fun rectangleshape_setfillcolor_QVe(self : Void*, color : Void*)
  fun rectangleshape_setoutlinecolor_QVe(self : Void*, color : Void*)
  fun rectangleshape_setoutlinethickness_Bw9(self : Void*, thickness : LibC::Float)
  fun rectangleshape_gettexture(self : Void*, result : Void**)
  fun rectangleshape_gettexturerect(self : Void*, result : Void*)
  fun rectangleshape_getfillcolor(self : Void*, result : Void*)
  fun rectangleshape_getoutlinecolor(self : Void*, result : Void*)
  fun rectangleshape_getoutlinethickness(self : Void*, result : LibC::Float*)
  fun rectangleshape_getlocalbounds(self : Void*, result : Void*)
  fun rectangleshape_getglobalbounds(self : Void*, result : Void*)
  fun rectangleshape_setposition_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun rectangleshape_setposition_UU2(self : Void*, position : Void*)
  fun rectangleshape_setrotation_Bw9(self : Void*, angle : LibC::Float)
  fun rectangleshape_setscale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun rectangleshape_setscale_UU2(self : Void*, factors : Void*)
  fun rectangleshape_setorigin_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun rectangleshape_setorigin_UU2(self : Void*, origin : Void*)
  fun rectangleshape_getposition(self : Void*, result : Void*)
  fun rectangleshape_getrotation(self : Void*, result : LibC::Float*)
  fun rectangleshape_getscale(self : Void*, result : Void*)
  fun rectangleshape_getorigin(self : Void*, result : Void*)
  fun rectangleshape_move_Bw9Bw9(self : Void*, offset_x : LibC::Float, offset_y : LibC::Float)
  fun rectangleshape_move_UU2(self : Void*, offset : Void*)
  fun rectangleshape_rotate_Bw9(self : Void*, angle : LibC::Float)
  fun rectangleshape_scale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun rectangleshape_scale_UU2(self : Void*, factor : Void*)
  fun rectangleshape_gettransform(self : Void*, result : Void*)
  fun rectangleshape_getinversetransform(self : Void*, result : Void*)
  fun rectangleshape_draw_kb9RoT(self : Void*, target : Void*, states : Void*)
  fun rectangleshape_draw_fqURoT(self : Void*, target : Void*, states : Void*)
  fun rectangleshape_draw_Xk1RoT(self : Void*, target : Void*, states : Void*)
  fun rectangleshape_initialize_wlj(self : Void*, copy : Void*)
  fun view_initialize(self : Void*)
  fun view_initialize_WPZ(self : Void*, rectangle : Void*)
  fun view_initialize_UU2UU2(self : Void*, center : Void*, size : Void*)
  fun view_setcenter_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun view_setcenter_UU2(self : Void*, center : Void*)
  fun view_setsize_Bw9Bw9(self : Void*, width : LibC::Float, height : LibC::Float)
  fun view_setsize_UU2(self : Void*, size : Void*)
  fun view_setrotation_Bw9(self : Void*, angle : LibC::Float)
  fun view_setviewport_WPZ(self : Void*, viewport : Void*)
  fun view_reset_WPZ(self : Void*, rectangle : Void*)
  fun view_getcenter(self : Void*, result : Void*)
  fun view_getsize(self : Void*, result : Void*)
  fun view_getrotation(self : Void*, result : LibC::Float*)
